# mosaic-stitch-consumer

./: Dockerfile  cloudbuild.yaml  k8s-conf-main.yaml  pyproject.toml
src/: consumer-mosaic-stitcher.py  crucible_stitch_process.py  utils.py
