[project]
name = "mosaic-stitch-consumer"
version = "0.1.0"
description = "Crucible consumer that stitches ScopeFoundry mosaic scans into pyramidal OME-TIFFs"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Crucible client (matches the app repo: dev branch from git)
    "nano-crucible",
    "mfid>=1.0.0",
    "pika>=1.3.0",
    "python-dotenv>=1.0.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-auth>=2.30.0",
    # Stitching stack, pinned to the versions verified working together in the
    # local basicpy env (numpy stays on 1.x -- basicpy/ashlar require < 2).
    "numpy==1.26.4",
    "scipy==1.12.0",
    "h5py==3.16.0",
    "ashlar==1.20.0",
    "basicpy==2.0.0",
    "tifffile==2026.3.3",
    "imageio==2.37.3",
]

[tool.uv]

[tool.uv.sources]
nano-crucible = { git = "https://github.com/MolecularFoundryCrucible/nano-crucible", branch = "dev" }
